v160
(xx/12/17)

Image Modifications:

Changes / Improvements / Optimizations:

Bug Fixes:
DietPi-Software | Plex Media Server: Resolved uninstall to include /var/lib/plexmediaserver in removal (which is not completed via apt purge).
DietPi-Update | dietpi.txt is now checked for missing entries, and, will now be patched during the update: https://github.com/Fourdee/DietPi/issues/1292#issuecomment-350818969
Sparky SBC | Kernel patch will be applied which resolves issues with HQPlayer playback: https://www.computeraudiophile.com/forums/topic/32132-allo-sparky-usbridge/?do=findComment&comment=753100


Allo Web Interface v4:
Sparky SBC: Matrix Audio X-SPDIF 2, native DSD is now added to kernel, many thanks @sudeep: https://github.com/sparkysbc/Linux/pull/3

-----------------------------------------------------------------------------------------------------------

v159
(10/12/17)

Image Modifications:
VMWare | Updated to Debian Stretch: https://github.com/Fourdee/DietPi/issues/1219
VirtualBox | Updated to Debian Stretch, many thanks @MichaIng: https://github.com/Fourdee/DietPi/issues/1219
RPi | Updated to Debian Stretch: https://github.com/Fourdee/DietPi/issues/475

Changes / Improvements / Optimizations:
General | Odroid XU3/4 images updated: Includes kernel support for EMMC 5.1 (thanks Meveric): https://github.com/Fourdee/DietPi/issues/1252
General | DietPi RPi kernel: Updated to 4.9.62.
General | DietPi RPi kernel: Will no longer re-install, if the current version is already at latest.
General | Added fahrenheit readouts for cpu_info and dietpi-config. For those "over the pond" :D : http://dietpi.com/phpbb/viewtopic.php?f=12&t=2516&p=9772#p9772
General | Sparky SBC: Kernel update to add support for USB 1.1 DACs, thanks @sudeep. This must be enabled manually, if using a USB 1.1 DAC, as this breaks Allo WiFi dongle. Edit "/DietPi/uEnv.txt" and change the value "aotg.aotg1_speed=1" (from "0"), then reboot.