@@ -5898,6 +5898,11 @@ _EOF_
 
 				INSTALL_URL_ADDRESS+='arm64.7z'
 
+			# - x86_64
+			# elif (( $HW_ARCH == 10 )); then
+
+				# INSTALL_URL_ADDRESS+='amd64.7z'
+
 			fi
 
 			/DietPi/dietpi/func/check_connection "$INSTALL_URL_ADDRESS"
@@ -5918,20 +5923,22 @@ _EOF_
 				# - Stretch, libssl1.0.0 no longer available
 				if (( $DISTRO >= 4 )); then
 
-					# - ARMv6
-					if (( $HW_ARCH == 1 )); then
+					INSTALL_URL_ADDRESS='http://dietpi.com/downloads/binaries/all/'
 
-						INSTALL_URL_ADDRESS='http://ftp.us.debian.org/debian/pool/main/o/openssl/libssl1.0.0_1.0.1t-1+deb8u6_armhf.deb'
+					# - ARMv6/7
+					if (( $HW_ARCH == 1 || $HW_ARCH == 2 )); then
 
-					# - ARMv7
-					elif (( $HW_ARCH == 2 )); then
-
-						INSTALL_URL_ADDRESS='http://ftp.us.debian.org/debian/pool/main/o/openssl/libssl1.0.0_1.0.1t-1+deb8u6_armhf.deb'
+						INSTALL_URL_ADDRESS+='libssl1.0.0_1.0.1t-1+deb8u7_armhf.deb'
 
 					# - ARM64
 					elif (( $HW_ARCH == 3 )); then
 
-						INSTALL_URL_ADDRESS='http://ftp.us.debian.org/debian/pool/main/o/openssl/libssl1.0.0_1.0.1t-1+deb8u6_arm64.deb'
+						INSTALL_URL_ADDRESS+='libssl1.0.0_1.0.1t-1+deb8u7_arm64.deb'
+
+					# - x86_64
+					elif (( $HW_ARCH == 10 )); then
+
+						INSTALL_URL_ADDRESS+='libssl1.0.0_1.0.1t-1+deb8u7_amd64.deb'
 
 					fi
 
