@@ -2781,20 +2781,6 @@ _EOF_
 
 	elif (( $VERSION_CURRENT == 158 )); then
 		#-------------------------------------------------------------------------------
-		#Reinstalls
-		#	Allo GUI (full)
-		#	MPD
-		#	Squeezelite
-		#	YMPD
-		update-rc.d ympd remove &> /dev/null # switch to systemD
-		rm /etc/init.d/ympd &> /dev/null # switch to systemD
-
-		# Enable ownCloud/Nextcloud maintenance mode before reinstall:
-		sudo -u www-data php /var/www/owncloud/occ maintenance:mode --on &> /dev/null
-		sudo -u www-data php /var/www/nextcloud/occ maintenance:mode --on &> /dev/null
-
-		/DietPi/dietpi/dietpi-software reinstall 159 128 114 47 36 32
-		#-------------------------------------------------------------------------------
 		#RPi update DietPi kernel:
 		if (( $HW_MODEL < 10 )); then
 
@@ -2949,6 +2935,20 @@ bootargs=earlyprintk clk_ignore_unused selinux=0 scandelay console=tty0 loglevel
 _EOF_
 
 		fi
+		#-------------------------------------------------------------------------------
+		#Reinstalls | Moved from v159
+		#	Allo GUI (full)
+		#	MPD
+		#	Squeezelite
+		#	YMPD
+		update-rc.d ympd remove &> /dev/null # switch to systemD
+		rm /etc/init.d/ympd &> /dev/null # switch to systemD
+
+		# Enable ownCloud/Nextcloud maintenance mode before reinstall:
+		sudo -u www-data php /var/www/owncloud/occ maintenance:mode --on &> /dev/null
+		sudo -u www-data php /var/www/nextcloud/occ maintenance:mode --on &> /dev/null
+
+		/DietPi/dietpi/dietpi-software reinstall 159 128 114 47 36 32
 		#-------------------------------------------------------------------------------
 
 	fi
